<resources>
    <string name="app_name">DailyQuote</string>
    <string name="title">Title</string>
    <string name="content">Content</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your name</string>
    <string name="greetings">Hello, what\'s your name?</string>
    <string name="save">Save</string>
    <string name="hello">Hello</string>
</resources>
