<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhat.tung.dailyquote.fragments.LoginFragment">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/your_name"
        android:minWidth="@dimen/min_width" />

    <TextView
        android:layout_width="@dimen/min_width"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_username"
        android:textSize="@dimen/text_size_large"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/greetings" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>
</RelativeLayout>
